# testappcode

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Color.h  NJLICColorTest.cpp  NJLICColorTest.h  README.md  android.sh  appletvos.sh  emscripten.sh  generate_project.sh  googletest.cmake.in  ios.sh  linux.sh  macOS.sh  vr_android.sh  vr_ios.sh  windows.sh
.github/workflows/: Certificates.p12  Certificates_base64.p12  android-arm64-v8a.yml  android-armeabi-v7a.yml  android-x86.yml  android-x86_64.yml  android.yml  android_vr-arm64-v8a.yml  android_vr-armeabi-v7a.yml  android_vr-x86.yml  android_vr-x86_64.yml  appletvos.yml  blank.yml  emscripten.yml  ios.yml  ios_vr.yml  linux.yml  macOS.yml  main.yml  windows.yml
android/: CMakeLists.txt
cmake/: FindNode.cmake  FindOctave.cmake  NodeJS.cmake  detectGL.cmake  macros.cmake  swig_csharp.cmake  swig_go.cmake  swig_java.cmake  swig_javascript.cmake  swig_lua.cmake  swig_octave.cmake  swig_perl.cmake  swig_php.cmake  swig_python.cmake  swig_ruby.cmake
cmake/swig/: swig.cmake  swig_java.cmake  swig_javascript.cmake  swig_lua.cmake  swig_php.cmake  swig_python.cmake  swig_ruby.cmake
cmake/swig/platform/android/: swig.cmake
cmake/swig/platform/macos/: swig.cmake
doc/doxygen/: CMakeLists.txt  Doxyfile.in  customdoxygen.css  doxygen.cmake  footer.html  header.html
ios/: CMakeLists.txt
macos/: CMakeLists.txt
platform/android/: CMakeLists.txt  GraphicsPlatform.h
platform/appletvos/: GraphicsPlatform.h
platform/emscripten/: GraphicsPlatform.h
platform/ios/: GraphicsPlatform.h
platform/macos/: CMakeLists.txt
platform/macos/public_include/: GraphicsPlatform.h
src/: BackgroundRenderer.cpp  BitmapFont.cpp  Camera.cpp  Color.cpp  DebugDrawer.cpp  Geometry.cpp  GraphGeometry.cpp  GraphPlot.cpp  Ishne.cpp  Ishne.h  ListItemNode.cpp  MaterialProperty.cpp  MeshGeometry.cpp  NJLICColorTest.cpp  NJLICColorTest.h  NJLICSpauldingMedical.cpp  Node.cpp  PubSub.cpp  Scene.cpp  Shader.cpp  SpriteGeometry.cpp  Util.cpp
src/assets/files/: 5MinExample.ecg
src/assets/fonts/: FranklinGothicMedium.json  FranklinGothicMedium.lua  convert.sh  convertFranklinGothicMedium.lua
src/assets/shaders/: StandardShader2.frag  StandardShader2.vert
src/platform/: CMakeLists.txt
src/platform/android/: CMakeLists.txt
src/platform/android/public_include/: GraphicsPlatform.h
src/platform/appletvos/: CMakeLists.txt
src/platform/appletvos/public_include/: GraphicsPlatform.h
src/platform/appletvos/test/cpp/: CMakeLists.txt
src/platform/emscripten/: CMakeLists.txt
src/platform/emscripten/public_include/: GraphicsPlatform.h
src/platform/emscripten/test/cpp/: CMakeLists.txt
src/platform/ios/: CMakeLists.txt
src/platform/ios/public_include/: GraphicsPlatform.h
src/platform/ios/test/cpp/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt
src/platform/linux/public_include/: GraphicsPlatform.h
src/platform/linux/test/cpp/: CMakeLists.txt
src/platform/macos/: CMakeLists.txt
src/platform/macos/public_include/: GraphicsPlatform.h
src/platform/macos/test/: CMakeLists.txt
src/platform/macos/test/cpp/: CMakeLists.txt  main.cpp
src/platform/macos/test/cpp/resources/: Info.plist  Info.plist.in
src/platform/windows/: CMakeLists.txt
src/platform/windows/public_include/: GraphicsPlatform.h
src/platform/windows/test/: CMakeLists.txt
src/platform/windows/test/cpp/: CMakeLists.txt
src/public_include/: BackgroundRenderer.h  BitmapFont.h  Camera.h  DebugDrawer.h  Geometry.h  GraphGeometry.h  GraphPlot.h  Ishne.h  ListItemNode.h  MaterialProperty.h  MeshGeometry.h  NJLICSpauldingMedical.h  Node.h  PubSub.h  Scene.h  Shader.h  SpriteGeometry.h  Util.h
swig.in/: _Ignore.swg  swig.h  swig.i  swig.swg
test/: TestBackgroundRenderer.cpp  TestBackgroundRenderer.hpp  TestColor.cpp  TestColor.h  TestRender.cpp  TestRender.h
test/lua/: main.lua
