
add_library(game STATIC ${SRCS} ${HDRS})

set_target_properties(
    game PROPERTIES
    OUTPUT_NAME "game"
    XCODE_ATTRIBUTE_PRODUCT_NAME game
    POSITION_INDEPENDENT_CODE ON
    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
    XCODE_ATTRIBUTE_SDKROOT "iphonesimulator"
    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
    XCODE_ATTRIBUTE_ENABLE_BITCODE NO
    INCLUDE_DIRECTORIES "${TARGET_INCLUDE_DIRS}"
 )
