list(APPEND GAME_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(game STATIC ${SRCS} ${HDRS})

set_target_properties(
    game PROPERTIES
    OUTPUT_NAME "game"
    XCODE_ATTRIBUTE_PRODUCT_NAME game
    POSITION_INDEPENDENT_CODE ON
    XCODE_ATTRIBUTE_ENABLE_BITCODE NO
    INCLUDE_DIRECTORIES "${GAME_INCLUDE_DIRS}"
    INTERFACE_INCLUDE_DIRECTORIES "${GAME_INCLUDE_DIRS}"
 )

 # include_directories(${GAME_INCLUDE_DIRS})

 message(FATAL_ERROR "GAME_INCLUDE_DIRS ${GAME_INCLUDE_DIRS}")
