list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

list(APPEND TARGET_DEFINITIONS "GL_SILENCE_DEPRECATION=1")

message(FATAL_ERROR "SRCS ${SRCS}")
add_library(game STATIC ${SRCS} ${HDRS})

target_compile_definitions(game PUBLIC ${TARGET_DEFINITIONS})

set(NEW_LIST ${TARGET_LIBRARIES})
list(REMOVE_ITEM NEW_LIST game)

target_link_libraries( game ${NEW_LIST})

set_property(TARGET game PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})
set_property(TARGET game PROPERTY OUTPUT_NAME "${TARGET_EXECUTABLE_NAME}")
set_property(TARGET game PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME ${TARGET_EXECUTABLE_NAME})

install(TARGETS game EXPORT gameTargets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION archive
    RUNTIME DESTINATION bin)

set(INCLUDE_FILES "")
foreach(include_dir ${TARGET_INCLUDE_DIRS})
    set(_INCLUDE_FILES "")
    file(GLOB _INCLUDE_FILES ${include_dir}/*.h*)
    list(APPEND INCLUDE_FILES ${INCLUDE_FILES})
endforeach()

install(FILES ${INCLUDE_FILES} DESTINATION include/game)
