SET( CMAKE_OSX_SYSROOT "appletvos" )
SET( CMAKE_XCODE_EFFECTIVE_PLATFORMS "-appletvos;-appletvsimulator" )

set(CMAKE_XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "10.0" CACHE STRING "Minimum supported iOS version")

add_library(SDL2 UNKNOWN IMPORTED)
set_property(TARGET SDL2 APPEND PROPERTY IMPORTED_LOCATION  "${THIRDPARTY_INCLUDE_DIR}/platform/${TARGET_PLATFORM}/Release\$(EFFECTIVE_PLATFORM_NAME)/libSDL2.a")
list(APPEND GAME_LIBRARIES SDL2)
set_target_properties(SDL2 PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${THIRDPARTY_INCLUDE_DIR}/includes/SDL2)

list(APPEND GAME_LIBRARIES "-framework OpenGLES")
list(APPEND GAME_LIBRARIES "-framework UIKit")
list(APPEND GAME_LIBRARIES "-framework Foundation")
list(APPEND GAME_LIBRARIES "-framework AVFoundation")
list(APPEND GAME_LIBRARIES "-framework GameController")
list(APPEND GAME_LIBRARIES "-framework CoreGraphics")
list(APPEND GAME_LIBRARIES "-framework QuartzCore")
list(APPEND GAME_LIBRARIES "-framework Metal")

list(APPEND GAME_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
list(APPEND GAME_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/public_include)

set(${PROJECT_NAME}_BUILD_STATIC ON CACHE BOOL "Build the static library")
set(${PROJECT_NAME}_BUILD_SHARED OFF CACHE BOOL "Build the shared library")
set(${PROJECT_NAME}_BUILD_FRAMEWORK OFF CACHE BOOL "Build the framework library")

if(${PROJECT_NAME}_BUILD_STATIC)
    add_library(${PROJECT_NAME}-static STATIC ${SRCS} ${HDRS})
    target_compile_definitions(${PROJECT_NAME}-static PUBLIC ${GAME_DEFINITIONS})

    target_link_libraries( ${PROJECT_NAME}-static ${GAME_LIBRARIES})
    set_target_properties(
        ${PROJECT_NAME}-static PROPERTIES

        MACOSX_BUNDLE TRUE

        POSITION_INDEPENDENT_CODE ON
        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "3"
        XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
        XCODE_ATTRIBUTE_SDKROOT "appletvos"
        XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
        XCODE_ATTRIBUTE_ENABLE_BITCODE NO
        INCLUDE_DIRECTORIES "${GAME_INCLUDE_DIRS}"

        XCODE_ATTRIBUTE_ARCHS[variant=Debug] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=Debug] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_ARCHS[variant=MinSizeRel] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=MinSizeRel] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_ARCHS[variant=RelWithDebInfo] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=RelWithDebInfo] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_ARCHS[variant=Release] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=Release] "$(ARCHS_STANDARD)"
        )

    set_property(TARGET ${PROJECT_NAME}-static PROPERTY PUBLIC_HEADER ${GAME_PUBLIC_HEADER})
    set_property(TARGET ${PROJECT_NAME}-static PROPERTY INCLUDE_DIRECTORIES ${GAME_INCLUDE_DIRS})
    set_property(TARGET ${PROJECT_NAME}-static PROPERTY OUTPUT_NAME "${PROJECT_NAME}")
    set_property(TARGET ${PROJECT_NAME}-static PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME "${PROJECT_NAME}")

    list(APPEND INSTALL_LIBS ${PROJECT_NAME}-static)
endif()

if(${PROJECT_NAME}_BUILD_SHARED)
    add_library(${PROJECT_NAME} SHARED ${SRCS} ${HDRS})
    target_compile_definitions(${PROJECT_NAME} PUBLIC ${GAME_DEFINITIONS})

    set_target_properties(
        ${PROJECT_NAME} PROPERTIES

        MACOSX_BUNDLE TRUE

        XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "SRBQ5SCF5X"
        POSITION_INDEPENDENT_CODE ON
        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "3"
        XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
        # XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER njligames.${TARGET_PLATFORM}.${PROJECT_NAME}
        XCODE_ATTRIBUTE_SDKROOT "appletvos"
        XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
        XCODE_ATTRIBUTE_ENABLE_BITCODE NO
        # XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "iPhone Developer"
        INCLUDE_DIRECTORIES "${GAME_INCLUDE_DIRS}"

        XCODE_ATTRIBUTE_ARCHS[variant=Debug] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=Debug] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_ARCHS[variant=MinSizeRel] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=MinSizeRel] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_ARCHS[variant=RelWithDebInfo] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=RelWithDebInfo] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_ARCHS[variant=Release] "$(ARCHS_STANDARD)"
        XCODE_ATTRIBUTE_VALID_ARCHS[variant=Release] "$(ARCHS_STANDARD)"
        )

    target_link_libraries( ${PROJECT_NAME} ${GAME_LIBRARIES})

    set_property(TARGET ${PROJECT_NAME} PROPERTY PUBLIC_HEADER ${GAME_PUBLIC_HEADER})
    set_property(TARGET ${PROJECT_NAME} PROPERTY INCLUDE_DIRECTORIES ${GAME_INCLUDE_DIRS})
    set_property(TARGET ${PROJECT_NAME} PROPERTY OUTPUT_NAME "${PROJECT_NAME}")
    set_property(TARGET ${PROJECT_NAME} PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME "${PROJECT_NAME}")

    list(APPEND INSTALL_LIBS ${PROJECT_NAME})
endif()

if(${PROJECT_NAME}_BUILD_FRAMEWORK)
    add_library(${PROJECT_NAME}Framework SHARED ${SRCS} ${HDRS})
    target_compile_definitions(${PROJECT_NAME}Framework PUBLIC ${GAME_DEFINITIONS})

    set_target_properties(
        ${PROJECT_NAME}Framework PROPERTIES

        MACOSX_BUNDLE TRUE

        XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "SRBQ5SCF5X"
        POSITION_INDEPENDENT_CODE ON
        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "3"
        XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
        XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER njligames.${TARGET_PLATFORM}.${PROJECT_NAME}Framework
        XCODE_ATTRIBUTE_SDKROOT "appletvos"
        XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
        XCODE_ATTRIBUTE_ENABLE_BITCODE NO
        XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "iPhone Developer"
        INCLUDE_DIRECTORIES "${GAME_INCLUDE_DIRS}"
        )

    target_link_libraries( ${PROJECT_NAME}Framework ${GAME_LIBRARIES})

    set_property(TARGET ${PROJECT_NAME}Framework PROPERTY PUBLIC_HEADER ${GAME_PUBLIC_HEADER})
    set_property(TARGET ${PROJECT_NAME}Framework PROPERTY INCLUDE_DIRECTORIES ${GAME_INCLUDE_DIRS})
    set_property(TARGET ${PROJECT_NAME}Framework PROPERTY OUTPUT_NAME "${PROJECT_NAME}")
    set_property(TARGET ${PROJECT_NAME}Framework PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME "${PROJECT_NAME}")

    set_target_properties(${PROJECT_NAME}Framework PROPERTIES
        FRAMEWORK TRUE
        FRAMEWORK_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.${PROJECT_VERSION_TWEAK}
        PUBLIC_HEADER "${GAME_PUBLIC_HEADER}"
        FRAMEWORK_VERSION C
        MACOSX_FRAMEWORK_IDENTIFIER com.njligames.${PROJECT_NAME}Framework.framework
        # MACOSX_FRAMEWORK_INFO_PLIST ${CMAKE_BINARY_DIR}/Info.plist
        # "current version" in semantic format in Mach-O binary file
        VERSION 16.4.0
        # "compatibility version" in semantic format in Mach-O binary file
        SOVERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.${PROJECT_VERSION_TWEAK}
        INSTALL_NAME_DIR "@executable_path/../../../Library/Frameworks"
        )

    list(APPEND INSTALL_LIBS ${PROJECT_NAME}Framework)
endif()

set(CLANG_FORMAT_BIN "/usr/local/bin/clang-format" CACHE STRING "use: `brew install clang-format` to install")
add_custom_target(
    ${PROJECT_NAME}-clang-format
    COMMAND ${CLANG_FORMAT_BIN} -style=file -i ${SRCS} ${HDRS} -verbose
    SOURCES
    "${CMAKE_SOURCE_DIR}/.clang-format"
    )

install(TARGETS ${INSTALL_LIBS} EXPORT gameTargets
    PUBLIC_HEADER DESTINATION include/${PROJECT_NAME}
    LIBRARY DESTINATION lib/${PROJECT_NAME}
    ARCHIVE DESTINATION lib/${PROJECT_NAME}
    RUNTIME DESTINATION bin/${PROJECT_NAME}
    FRAMEWORK DESTINATION Frameworks/${PROJECT_NAME}
    )

if(${PROJECT_NAME}_TEST)
    enable_testing()
    add_subdirectory(test)
endif()

